package com.programacaoiii.model;

import java.util.Map;

public class Estoque {
	private Map<Peca, Integer> pecasDisponiveis;
	
	public void verPecas() {
		
	}
	
	public void adicionarPeca(Peca peca, int quantidade) {
		
	}
	
	public void removerPeca(Peca peca, int quantidade) {
		
	}
	
	public void verificarDisponibilidade(Peca peca) {
		
	}
}
